--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Trenz</title>
+    <title>Trenz </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
     <!-- <h1>Trenz</h1> -->
 </div>
 <header class="my-header">
-    <h1>Trenz</h1>
+    <h1>Trenz 4</h1>
 </header>
 <!-- </div> -->
 
